# filmoscopie

./: .gitignore  Dockerfile  Makefile  movies.ipynb  pyproject.toml
filmoscopie/: embed.py  subtitle.py  trailer.py  wikipedia.py  yolo.py
filmoscopie/wikipedia/: __init__.py  __main__.py  page.py  page_test.py  source.py
fixtures/: dark_city_fr.wiki
