[project]
name = "filmoscopie"
version = "0.1.0"
description = "This movie looks like something I already watch."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wiki-dump-reader @ git+https://github.com/athoune/wiki-dump-reader.git@afbfec5d45924e96e72ff80feebc0d1ef2ab3fde",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2",
    "tiktoken>=0.12.0",
    "sentencepiece>=0.2.1",
]

sound = [
    "llvmlite>=0.46.0",
    "numpy>=2.4.2",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "ruff>=0.15.0",
]
