[project]
name = "filmoscopie"
version = "0.1.0"
description = "This movie looks like something I already watch."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wiki-dump-reader @ git+https://github.com/athoune/wiki-dump-reader.git@753b1c3cb809f7ac84cbf24a59187a480c2bcca1",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2",
    "tiktoken>=0.12.0",
    "sentencepiece>=0.2.1",
    "zstandard>=0.25.0",
    "yt-dlp>=2026.2.4",
    "youtube-search>=2.2.0",
]

sound = [
    "llvmlite>=0.46.0",
    "numpy>=2.4.2",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]
